--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- If your application is targeting iOS BEFORE 4.0 you MUST put json2.js from http://www.JSON.org/json2.js into your www directory and include it here -->
 	<script src="phonegap.js"></script>
-    <script type="text/javascript" charset="utf-8" src="barcodescanner.js"></script>
+    <script src="barcodescanner.js"></script>
 
     <script type="text/javascript">
 
