--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@ function scannerFailure(message) {
 				<h1>ConnectSmart DineXperience</h1>
 		</div>
 		<div data-role="content">
-			<center><div style="font-size: 24px; margin-bottom: 30px;">Ask your hostess for a QR code to begin your DineXperience!</div></center>
+			<center><div style="font-size: 24px; margin-bottom: 30px;">Please ask your hostess for a QR code to begin your DineXperience!</div></center>
 			
-			<button id="scan-button" style="font-size: 48px;">Scan Code Now</button>
+			<button id="scan-button">Scan Code Now</button>
 
 			<p><span id="scan-result"></span>
         </div>
