--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@ function scannerFailure(message) {
   <body onload="onBodyLoad()">
 	<div data-role="page" data-theme="b">
 		<div data-role="header" data-theme="b">
-				<img src="Images/QSR_Logo_Mobile.png" style="float: left; padding-left: 10px; padding-top: 2px; padding-bottom: 2px;" />
+				<img src="images/QSR_Logo_Mobile.png" style="float: left; padding-left: 10px; padding-top: 2px; padding-bottom: 2px;" />
+				<img src="/images/QSR_Logo_Mobile.png" style="float: left; padding-left: 10px; padding-top: 2px; padding-bottom: 2px;" />
 				<h1>ConnectSmart DineXperience</h1>
 		</div>
 		<div data-role="content">
