--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 				<p><span id="scan-result"></span>
 			</div>
-			<div id="notifyPanel">
+			<div id="notifyPanel" style="visibility: hidden;">
 				<center><div style="font-size: 24px; margin-bottom: 30px;">
 					<span name="partyName"></span> party of <span name="partySize"></span>
 				</div></center>
