--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 		}
 
 		function clickScan() {
-			//window.plugins.barcodeScanner.scan(scannerSuccess, scannerFailure);
-			scannerSuccess("http://test.com?partyName=Downs&partySize=4");
+			window.plugins.barcodeScanner.scan(scannerSuccess, scannerFailure);
 		}
 
 		// Beep three times
