--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			</div>
 			<div id="notifyPanel" style="visibility: hidden;">
 				<center><div style="font-size: 24px; margin-bottom: 30px;">
-					<span name="partyName"></span> party of <span name="partySize"></span>
+					<span id="partyName"></span> party of <span id="partySize"></span>
 				</div></center>
 				
 				<p><span>Table is ready.  Notifying you now...</span>
