--- a/index.html
+++ b/index.html
@@ -27,16 +27,27 @@
 
 			scanButton = document.getElementById("scan-button");
 			resultSpan = document.getElementById("scan-result");
+			onMyWay = document.getElementById("onMyWay");
 		}
 		
 		/* When this function is called, PhoneGap has been initialized and is ready to roll */
 		function onDeviceReady()
 		{
 			scanButton.addEventListener("click", clickScan, false);
+			onMyWay.addEventListener("click", clickOnMyWay, false);
 		}
 
 		function clickScan() {
 			window.plugins.barcodeScanner.scan(scannerSuccess, scannerFailure);
+		}
+
+		var timer = null;
+		
+		function clickOnMyWay() {
+            if (timer != null) {
+                window.clearInterval(timer);
+                timer = null;
+            }
 		}
 
 		// Beep three times
@@ -62,18 +73,12 @@
 		//------------------------------------------------------------------------------
 		function scannerSuccess(result) {
 			console.log("scannerSuccess: result: " + result)
-			alert(result.text);
-			alert(getURLParameter(result.text, "partyName"));
-			alert(getURLParameter(result.text, "partySize"));
 			document.getElementById("partyName").innerHTML = getURLParameter(result.text, "partyName");
 			document.getElementById("partySize").innerHTML = getURLParameter(result.text, "partySize");
-			alert("updated text");
-			document.getElementById("scanPanel").style.visibility = 'hidden'; 
-			document.getElementById("notifyPanel").style.visibility = 'visible'; 
-			alert("changed vis");
-			playBeep();
-			vibrate();
-			
+			document.getElementById("scanPanel").style.display = 'none'; 
+			document.getElementById("notifyPanel").style.display = 'block'; 
+
+			timer = window.setInterval(vibrate, 5000);
 			
 		}
 
@@ -96,14 +101,16 @@
 				
 				<button id="scan-button">Scan Code Now</button>
 
-				<p><span id="scan-result"></span>
+				<span id="scan-result"></span>
 			</div>
-			<div id="notifyPanel" style="visibility: hidden;">
+			<div id="notifyPanel" style="display: none;">
 				<center><div style="font-size: 24px; margin-bottom: 30px;">
 					<span id="partyName"></span> party of <span id="partySize"></span>
 				</div></center>
-				
-				<p><span>Table is ready.  Notifying you now...</span>
+			
+				<center>
+				<span>Table is ready.  Notifying you now...</span>
+				<button id="onMyWay">On my way!</button>
 			</div>
 		</div>
 
