--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- If your application is targeting iOS BEFORE 4.0 you MUST put json2.js from http://www.JSON.org/json2.js into your www directory and include it here -->
 	<script src="phonegap.js"></script>
     <script src="barcodescanner.js"></script>
+    <script src="statusbarnotification.js"></script>
 
     <script type="text/javascript">
 		function onBodyLoad()
@@ -55,6 +56,7 @@
 		function notify() {
 			vibrate();
 			playBeep();
+			window.plugins.statusBarNotification.notify("Table ready", "Table ready");
 		}
 		
 		// Beep three times
